# keycompute

./: .dockerignore  .env.example  .gitignore  .review_prompt.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.web  LICENSE  README.ar.md  README.es.md  README.md  README.zh-CN.md  README.zh-TW.md  config.example.toml  config.toml.example  docker-compose.replicas.yml  docker-compose.yml
.github/workflows/: gpt-pr-review.yml  keycompute.yaml  keycompute.yml
.qoder/skills/module-review/: SKILL.md
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: db.rs  lib.rs
crates/integration-tests/src/mocks/: email.rs  http_transport.rs  mod.rs
crates/integration-tests/tests/: e2e_auth.rs  e2e_auth_token_version.rs  e2e_billing_flow.rs  e2e_cache_pricing.rs  e2e_concurrent.rs  e2e_database.rs  e2e_db_api_key.rs  e2e_db_balance.rs  e2e_db_concurrent.rs  e2e_db_connection.rs  e2e_db_registration.rs  e2e_db_router.rs  e2e_db_tenant.rs  e2e_db_transaction.rs  e2e_db_usage_log.rs  e2e_db_user.rs  e2e_email_service.rs  e2e_error_handling.rs  e2e_full_chain.rs  e2e_gateway.rs  e2e_http_transport.rs  e2e_node_gateway.rs  e2e_observability.rs  e2e_password_reset.rs  e2e_pricing.rs  e2e_provider.rs  e2e_ratelimit.rs  e2e_redis_ratelimit.rs  e2e_redis_runtime.rs  e2e_routing.rs  e2e_system_settings.rs  e2e_tips_withdrawals.rs  e2e_user_tenant.rs
crates/keycompute-auth/: Cargo.toml
crates/keycompute-auth/src/: api_key.rs  jwt.rs  lib.rs  permission.rs  user.rs
crates/keycompute-auth/src/password/: login.rs  mod.rs  register.rs  reset.rs
crates/keycompute-billing/: Cargo.toml
crates/keycompute-billing/src/: balance.rs  calculator.rs  usage_log.rs
crates/keycompute-cache/: Cargo.toml
crates/keycompute-cache/src/: cache.rs  config.rs  error.rs  lib.rs  lock.rs  memory.rs
crates/keycompute-config/: Cargo.toml
crates/keycompute-config/src/: database.rs  email.rs  lib.rs  node_gateway.rs
crates/keycompute-db/: Cargo.toml
crates/keycompute-db/src/: db_router.rs  lib.rs  schema.rs
crates/keycompute-db/src/migrations/: 001_init.sql
crates/keycompute-db/src/models/: account.rs  api_key.rs  distribution_record.rs  mod.rs  node.rs  node_session.rs  node_task.rs  node_task_submission.rs  node_tip.rs  node_tip_withdrawal.rs  password_reset.rs  payment_order.rs  pending_registration.rs  pricing_model.rs  system_setting.rs  tenant.rs  tenant_distribution_rule.rs  usage_log.rs  user.rs  user_balance.rs  user_credential.rs  user_node_gateway_token.rs  user_referral.rs
crates/keycompute-distribution/: Cargo.toml
crates/keycompute-distribution/src/: calculator.rs  records.rs
crates/keycompute-emailserver/: Cargo.toml
crates/keycompute-emailserver/src/: lib.rs
crates/keycompute-observability/src/: host_monitor.rs  lib.rs  logger.rs  metrics.rs
crates/keycompute-payment/keycompute-alipay/: Cargo.toml
crates/keycompute-payment/keycompute-alipay/src/: lib.rs  service.rs
crates/keycompute-pricing/: Cargo.toml
crates/keycompute-pricing/src/: lib.rs
crates/keycompute-ratelimit/: Cargo.toml
crates/keycompute-ratelimit/src/: lib.rs  redis.rs
crates/keycompute-routing/: Cargo.toml
crates/keycompute-routing/src/: lib.rs  provider_health.rs
crates/keycompute-runtime/: Cargo.toml
crates/keycompute-runtime/src/: crypto.rs  lib.rs  redis_store.rs
crates/keycompute-server/: Cargo.toml
crates/keycompute-server/src/: error.rs  extractors.rs  lib.rs  main.rs  middleware.rs  providers.rs  router.rs  state.rs
crates/keycompute-server/src/handlers/: admin.rs  admin_account.rs  admin_monitoring.rs  admin_node_gateway.rs  admin_pricing.rs  admin_settings.rs  admin_user.rs  anthropic.rs  auth.rs  billing.rs  chat.rs  distribution.rs  health.rs  mod.rs  node.rs  node_gateway_token.rs  node_tips.rs  openai.rs  payment.rs  pricing.rs  requirement.rs  routing.rs  user.rs
crates/keycompute-types/src/: error.rs  execution_plan.rs  lib.rs  node.rs  request.rs  response.rs  usage.rs
crates/llm-gateway/: Cargo.toml
crates/llm-gateway/src/: executor.rs  failover.rs  lib.rs  normalize.rs  retry.rs  streaming.rs
crates/llm-gateway/src/proxy/: client.rs
crates/llm-provider/keycompute-claude/src/: adapter.rs
crates/llm-provider/keycompute-deepseek/: Cargo.toml
crates/llm-provider/keycompute-deepseek/src/: adapter.rs  lib.rs
crates/llm-provider/keycompute-doubao/: Cargo.toml
crates/llm-provider/keycompute-doubao/src/: adapter.rs  lib.rs
crates/llm-provider/keycompute-gemini/src/: adapter.rs  protocol.rs
crates/llm-provider/keycompute-ollama/: Cargo.toml
crates/llm-provider/keycompute-ollama/src/: adapter.rs  lib.rs  protocol.rs  stream.rs
crates/llm-provider/keycompute-openai/: Cargo.toml
crates/llm-provider/keycompute-openai/src/: adapter.rs  lib.rs  protocol.rs  stream.rs
crates/llm-provider/keycompute-provider-trait/: Cargo.toml
crates/llm-provider/keycompute-provider-trait/src/: http.rs  lib.rs  request.rs  stream.rs
crates/llm-provider/keycompute-vllm/: Cargo.toml
crates/llm-provider/keycompute-vllm/src/: adapter.rs
crates/node-gateway/: Cargo.toml
crates/node-gateway/src/: config.rs  lib.rs  node_index.rs  redis.rs  service.rs  store.rs  sweeper.rs
docs/: api_non_stream.py  api_stream.py  curl_text_response.sh  curl_vision.sh
docs/design/: admin-console-design.md
nginx/: nginx.conf
scripts/github/: review_pr.py
