[package]
name = "keycompute-cache"
version = "0.1.0"
edition = "2024"
description = "Unified Redis caching service with distributed locking support"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.27", features = ["tokio-comp"] }
deadpool-redis = "0.18"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tracing = "0.1"
