[package]
name = "keycompute-db"
version = "0.2.0"
edition = "2024"

[dependencies]
keycompute-types.workspace = true
sea-orm = { workspace = true }
tokio = { version = "1.44", features = ["full"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tracing = "0.1"
rust_decimal = { version = "1", features = ["serde-str"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
subtle = "2.6"
