[package]
name = "node-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
keycompute-types = { path = "../keycompute-types" }
keycompute-db = { path = "../keycompute-db" }
keycompute-config = { path = "../keycompute-config" }
keycompute-routing = { path = "../keycompute-routing" }
keycompute-runtime = { path = "../keycompute-runtime", features = ["redis"] }

anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
deadpool-redis = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
